--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,13 @@ body {
     text-wrap: balance;
   }
 }
+
+.dark .react-flow__node {
+  background: #777;
+  color: white;
+}
+ 
+.light .react-flow__node {
+  background: white;
+  color: #111;
+}
