update 0.1.0 added new feature " switch , copper , out etc"

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,29 @@ body {
   background: white;
   color: #111;
 }
+
+.animate-slideIn {
+  animation: slideIn 0.5s forwards;
+}
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+.animate-slideOut {
+  animation: slideOut 0.5s forwards;
+}
+
+@keyframes slideOut {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
